<resources>

    <string name="app_name">MYMFNOW</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="website">https://en.wikipedia.org/wiki/Film</string>
    <string name="date">22 Oct 2015</string>
    <string name="selected_item">Selected item</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_mutual_fund">Mutual Funds</string>
    <string name="title_mutual_fund_manual">Mutual Funds Manual</string>
    <string name="title_transact_online">Transact Online</string>
    <string name="title_my_goals">My Goals</string>
    <string name="title_robo_advisor">Robo Advisor</string>
    <string name="title_calculator">Calculator</string>

    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="every_new_release_is_better_than_the_last">Every new release is better than the last, so why lag behind. Upgrade now and enjoy the best version yet!</string>
    <string name="hint_scheme_name">Type Scheme Name</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_SIP_amount">SIP Amount</string>
    <string name="hint_units">Units</string>
    <string name="hint_purchase_date">Type Purchase Date</string>
    <string name="hint_NAV_Value">NAV Value</string>
    <string name="hint_Folio_Number">Folio Number</string>
    <string name="hint_broker_code">Broker Code (ARN Number)</string>
    <string name="txt_amount_units">Select Amount / Units</string>
    <string name="txt_dividend_option">Select Dividend Option</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_reset">Reset</string>


    <string-array name = "spin_item_gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="spin_item_occupation">
        <item>Select Occupation</item>
        <item>Business</item>
        <item>Service</item>
        <item>Professional</item>
        <item>Agriculturist</item>
        <item>Retired</item>
        <item>House wife</item>
        <item>Students</item>
        <item>Others</item>
        <item>Doctor</item>
        <item>Private Sector Service</item>
        <item>Public Sector Service</item>
        <item>Forex Dealer</item>
        <item>Government Service</item>
        <item>Unknown/ Not Applicable</item>

    </string-array>


    <string-array name="spin_item_annual_salary">
        <item>Select Annual Salary</item>
        <item>Below 1 lakh</item>
        <item>1 - 5 Lakhs</item>
        <item>5 - 10 Lakhs</item>
        <item>10 - 25 Lakhs</item>
        <item>25 Lakhs - 1 Crore</item>
        <item>Above 1 Crore</item>

    </string-array>

    <string-array name="spin_item_income_source">
        <item>Select Income Source</item>
        <item>Salary</item>
        <item>Business Income</item>
        <item>Gift</item>
        <item>Ancestral Property</item>
        <item>Rental Income</item>
        <item>Prize Money</item>
        <item>Royalty</item>
        <item>Others</item>
    </string-array>

    <string-array name="spin_item_address_type">
        <item>Select Address Type</item>
        <item>Residential or Business</item>
        <item>Residential</item>
        <item>Business</item>
        <item>Registered Office</item>
        <item>Unspecified</item>
    </string-array>


</resources>
