<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.indocosmic.mymfnow.mutualFundManualFragmet.FreshPurchase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/btn_color_yellow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Fresh Purchase"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:elevation="8dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_scheme_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <AutoCompleteTextView
                    android:id="@+id/edt_SchemeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/black"
                    android:hint="@string/hint_scheme_name" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_dividend_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_dividend_option"
                android:textSize="14sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:visibility="gone"/>


            <RadioGroup
                android:id="@+id/dividendRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radio_dividend_payout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dividend Payout"
                    android:checked="true"
                    android:buttonTint="@color/black"/>

                <RadioButton
                    android:id="@+id/radio_dividend_reinvest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dividend Reinvest"
                    android:checked="false"
                    android:buttonTint="@color/black"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_amount_units"
                android:textSize="14sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <RadioButton
                    android:id="@+id/radio_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Amount"
                    android:checked="true"
                    android:buttonTint="@color/black"/>

                <RadioButton
                    android:id="@+id/radio_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Units"
                    android:checked="false"
                    android:buttonTint="@color/black"/>

            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_Amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/black"
                    android:hint="@string/hint_amount"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edt_Units"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:padding="10sp"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/black"
                    android:hint="@string/hint_units" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_purchaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_purchaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:focusable="false"
                    android:editable="false"
                    android:inputType="date"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/black"
                    android:hint="@string/hint_purchase_date"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_NAV_Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_NAV_Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/hint_NAV_Value" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Folio_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_Folio_Number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/hint_Folio_Number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_broker_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_broker_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/white"
                    android:hint="@string/hint_broker_code" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/btnSubmitFreshPurchase"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@color/colorPrimaryLight"
                    android:textColor="@color/white"
                    android:text="@string/txt_submit"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/btnResetFreshPurchase"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@color/colorPrimaryLight"
                    android:textColor="@color/white"
                    android:text="@string/txt_reset"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>