<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.indocosmic.mymfnow.mutualFundManualFragmet.FreshPurchase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_parent_linear">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/btn_color_yellow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Additional Purchase"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:elevation="8dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select Folio Number"
                    android:textSize="18sp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="22dp"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spn_folio_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select Scheme Name"
                    android:textSize="18sp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="22dp"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spn_scheme_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="4dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_amount_units"
                    android:textSize="14sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <RadioButton
                        android:id="@+id/radio_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Amount"
                        android:checked="true"
                        android:buttonTint="@color/black"/>

                    <RadioButton
                        android:id="@+id/radio_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Units"
                        android:checked="false"
                        android:buttonTint="@color/black"/>

                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_Layout_Amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_Amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:padding="10sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/black"
                        android:hint="@string/hint_amount"
                        tools:ignore="Deprecated" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_Layout_Units"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/edt_Units"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:padding="10sp"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/black"
                        android:hint="@string/hint_units" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_purchaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_purchaseDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:focusable="false"
                        android:editable="false"
                        android:inputType="date"
                        android:padding="10sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/black"
                        android:hint="Select Purchase Date"
                        tools:ignore="Deprecated" />
                </android.support.design.widget.TextInputLayout>




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_NAV_Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_NAV_Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="number"
                        android:padding="10sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/white"
                        android:hint="@string/hint_NAV_Value"
                        android:enabled="false"/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:layout_marginBottom="5dp"
                    android:gravity="center|bottom">

                    <Button
                        android:id="@+id/btnSubmitAdditionalPurchase"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@color/colorPrimaryLight"
                        android:textColor="@color/white"
                        android:text="@string/txt_submit"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:textSize="14sp"/>

                    <Button
                        android:id="@+id/btnResetAdditionalPurchase"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@color/colorPrimaryLight"
                        android:textColor="@color/white"
                        android:text="@string/txt_reset"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>