<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_color_blue"
    tools:context="com.indocosmic.mymfnow.mutualFundManualFragmet.FreshPurchase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fresh Purchase SIP"
            android:textSize="24sp"
            android:layout_margin="20sp"
            android:textColor="@color/white"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_scheme_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_SchemeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="10sp"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white"
                android:hint="@string/hint_scheme_name" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_SIP_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_SIP_Amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="10sp"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white"
                android:hint="@string/hint_SIP_amount" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_FirstinvestmentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_FirstinvestmentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:focusable="false"
                android:editable="false"
                android:inputType="date"
                android:padding="10sp"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white"
                android:hint="Select First Investment Date"
                tools:ignore="Deprecated" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_SIPStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_SIPStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:focusable="false"
                android:editable="false"
                android:inputType="date"
                android:padding="10sp"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white"
                android:hint="Select SIP Start Date"
                tools:ignore="Deprecated" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_SIPEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_SIPEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:focusable="false"
                android:editable="false"
                android:inputType="date"
                android:padding="10sp"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white"
                android:hint="Select SIP End Date"
                tools:ignore="Deprecated" />
        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_Folio_Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_Folio_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="10sp"
                android:inputType="number"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white"
                android:hint="@string/hint_Folio_Number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_broker_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_broker_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="10sp"
                android:inputType="number"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white"
                android:hint="@string/hint_broker_code" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>
